--- a/core/build.gradle
+++ b/core/build.gradle
@@ -32,6 +32,7 @@ assemble {
 }
 
 dependencies {
+    compile(group: 'commons-cli', name: 'commons-cli', version: '1.2')
     compile(group: 'commons-logging', name: 'commons-logging', version: '1.1.1')
     compile(group: 'commons-lang', name: 'commons-lang', version: '2.6')
     compile(group: 'commons-collections', name: 'commons-collections', version: '3.2.1')
