doc formatter connections refactoring properties refactoring

--- a/core/reporting.properties
+++ b/core/reporting.properties
@@ -4,3 +4,4 @@ cuba.reporting.sql.user=sa
 cuba.reporting.sql.password=
 cuba.reporting.openoffice.path=
 cuba.reporting.openoffice.ports=
+cuba.reporting.openoffice.timeout=60
