doc formatter refactoring

--- a/core/reporting.properties
+++ b/core/reporting.properties
@@ -5,3 +5,4 @@ cuba.reporting.sql.password=
 cuba.reporting.openoffice.path=
 cuba.reporting.openoffice.ports=
 cuba.reporting.openoffice.timeout=60
+cuba.reporting.openoffice.displayDeviceAvailable=false
