--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,6 @@
 apply(plugin: 'java')
 apply(plugin: 'idea')
+apply(plugin: 'maven')
 
 sourceSets {
     main {
@@ -16,15 +17,30 @@ sourceSets {
     }
 }
 
+def artifactVersion = '0.1-SNAPSHOT'
+def isSnapshot = artifactVersion.endsWith('-SNAPSHOT')
+
+group = 'com.haulmont.reporting'
+version = artifactVersion
+
+def repositoryUrl = 'http://repository.haulmont.com:8587/nexus/content'
+def workRepositoryUrl = "$repositoryUrl/groups/work"
+def repositoryUser = System.getenv('HAULMONT_REPOSITORY_USER')
+def repositoryPassword = System.getenv('HAULMONT_REPOSITORY_PASSWORD')
+
 repositories {
     mavenCentral()
     maven {
         credentials {
-            username System.getenv('HAULMONT_REPOSITORY_USER')
-            password System.getenv('HAULMONT_REPOSITORY_PASSWORD')
+            username repositoryUser
+            password repositoryPassword
         }
-        url "http://repository.haulmont.com:8587/nexus/content/groups/work"
+        url workRepositoryUrl
     }
+}
+
+configurations {
+    deployerJars
 }
 
 assemble {
@@ -72,6 +88,18 @@ dependencies {
     compile(group: 'hsqldb', name: 'hsqldb', version: '1.8.0.10')
 
     testCompile(group: 'junit', name: 'junit', version: '4.5')
+
+    deployerJars(group: 'org.apache.maven.wagon', name: 'wagon-http', version: '1.0-beta-2')
+}
+
+uploadArchives.configure {
+    repositories.mavenDeployer {
+        name = 'httpDeployer'
+        configuration = configurations.deployerJars
+        repository(url: "$repositoryUrl/repositories/" + (isSnapshot ? 'snapshots' : 'releases')) {
+            authentication(userName: repositoryUser, password: repositoryPassword)
+        }
+    }
 }
 
 
