Move to POI 3.9 #PL-2145

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -82,8 +82,9 @@ dependencies {
     compile(group: "xalan", name: "xalan", version: "2.7.1")
     compile(group: "xalan", name: "serializer", version: "2.7.1")
     compile(group: "com.lowagie", name: "itext", version: "2.1.0")
-    compile(group: 'com.haulmont.thirdparty', name: 'poi', version: '3.7.20121205')
-    compile(group: 'com.haulmont.thirdparty', name: 'poi-scratchpad', version: '3.7.20101029')
+    compile(group: 'com.haulmont.thirdparty', name: 'poi', version: '3.9.20130515')
+    compile(group: 'org.apache.poi', name: 'poi-scratchpad', version: '3.8')
+    compile(group: 'commons-codec', name: 'commons-codec', version: '1.6')
     compile(group: 'com.haulmont.thirdparty', name: 'core-renderer', version: 'R8')
     compile(group: "com.haulmont.thirdparty", name: "docx4j", version: "2.8.1.20130201")
     compile(group: 'hsqldb', name: 'hsqldb', version: '1.8.0.10')
