integration test for xls added

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -46,6 +46,8 @@ configurations {
 
 assemble {
     new File("result").mkdir();
+    new File("result/integration").mkdir();
+    new File("result/smoke").mkdir();
 }
 
 dependencies {
