--- a/core/build.gradle
+++ b/core/build.gradle
@@ -17,10 +17,10 @@ sourceSets {
     }
 }
 
-def artifactVersion = '0.1-SNAPSHOT'
+def artifactVersion = '1.0-SNAPSHOT'
 def isSnapshot = artifactVersion.endsWith('-SNAPSHOT')
 
-group = 'com.haulmont.reporting'
+group = 'com.haulmont.yarg'
 version = artifactVersion
 
 def repositoryUrl = 'http://repository.haulmont.com:8587/nexus/content'
@@ -93,9 +93,9 @@ dependencies {
     compile(group: 'commons-codec', name: 'commons-codec', version: '1.6')
     compile(group: 'com.haulmont.thirdparty', name: 'core-renderer', version: 'R8')
     compile(group: "com.haulmont.thirdparty", name: "docx4j", version: "2.8.1.20130201")
-    compile(group: 'hsqldb', name: 'hsqldb', version: '1.8.0.10')
 
     testCompile(group: 'junit', name: 'junit', version: '4.5')
+    testRuntime(group: 'hsqldb', name: 'hsqldb', version: '1.8.0.10')
 
     deployerJars(group: 'org.apache.maven.wagon', name: 'wagon-http', version: '1.0-beta-2')
 }
