--- a/core/build.gradle
+++ b/core/build.gradle
@@ -17,7 +17,8 @@ sourceSets {
     }
 }
 
-def artifactVersion = '1.0.11'
+def artifactVersion = '1.0-SNAPSHOT'
+//def artifactVersion = '1.0.12'
 def isSnapshot = artifactVersion.endsWith('-SNAPSHOT')
 
 group = 'com.haulmont.yarg'
