--- a/core/build.gradle
+++ b/core/build.gradle
@@ -64,7 +64,7 @@ assemble {
 }
 
 dependencies {
-    compile(group: 'com.haulmont.thirdparty', name: 'gson', version: '1.7.1')
+//    compile(group: 'com.haulmont.thirdparty', name: 'gson', version: '1.7.1')
     compile(group: 'commons-cli', name: 'commons-cli', version: '1.2')
     compile(group: 'commons-logging', name: 'commons-logging', version: '1.1.1')
     compile(group: 'commons-lang', name: 'commons-lang', version: '2.6')
@@ -106,6 +106,7 @@ dependencies {
     compile(group: 'commons-codec', name: 'commons-codec', version: '1.6')
     compile(group: 'com.haulmont.thirdparty', name: 'core-renderer', version: 'R8')
     compile(group: "com.haulmont.thirdparty", name: "docx4j", version: "2.8.1.20130201")
+    compile(group: "com.jayway.jsonpath", name: "json-path", version: "0.9.1")
 
     testCompile(group: 'junit', name: 'junit', version: '4.5')
     testRuntime(group: 'hsqldb', name: 'hsqldb', version: '1.8.0.10')
