--- a/core/reporting.properties
+++ b/core/reporting.properties
@@ -1,8 +1,17 @@
-cuba.reporting.sql.driver=org.hsqldb.jdbcDriver
-cuba.reporting.sql.dbUrl=jdbc:hsqldb:hsql://localhost/reportingDb
-cuba.reporting.sql.user=sa
+cuba.reporting.sql.driver=
+cuba.reporting.sql.dbUrl=
+cuba.reporting.sql.user=
 cuba.reporting.sql.password=
 cuba.reporting.openoffice.path=
 cuba.reporting.openoffice.ports=
-cuba.reporting.openoffice.timeout=60
-cuba.reporting.openoffice.displayDeviceAvailable=false
+cuba.reporting.openoffice.timeout=
+cuba.reporting.openoffice.displayDeviceAvailable=
+
+#cuba.reporting.sql.driver=org.hsqldb.jdbcDriver
+#cuba.reporting.sql.dbUrl=jdbc:hsqldb:hsql://localhost/reportingDb
+#cuba.reporting.sql.user=sa
+#cuba.reporting.sql.password=
+#cuba.reporting.openoffice.path=/usr/lib/libreoffice/program
+#cuba.reporting.openoffice.ports=8100|8101
+#cuba.reporting.openoffice.timeout=60
+#cuba.reporting.openoffice.displayDeviceAvailable=false
