--- a/core/build.gradle
+++ b/core/build.gradle
@@ -20,8 +20,8 @@ sourceSets {
     }
 }
 
-def artifactVersion = '1.0-SNAPSHOT'
-//def artifactVersion = '1.0.15'
+//def artifactVersion = '1.0-SNAPSHOT'
+def artifactVersion = '1.0.16'
 def isSnapshot = artifactVersion.endsWith('-SNAPSHOT')
 
 group = 'com.haulmont.yarg'
