--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,3 +1,4 @@
+//todo mavenUploadPlugin
 def artifactVersion = '1.0-SNAPSHOT'//'1.0.26'
 if (rootProject.hasProperty('buildVersion')) {
     artifactVersion = rootProject['buildVersion']
@@ -25,6 +26,7 @@ configure([api, core]) {
     apply(plugin: 'java')
     apply(plugin: 'idea')
     apply(plugin: 'maven')
+    apply(plugin: 'signing')
 
     group = 'com.haulmont.yarg'
     version = artifactVersion
@@ -75,6 +77,10 @@ configure([api, core]) {
     }
 
     install.configurations = configurations
+
+    signing {
+        sign configurations.archives
+    }
 }
 
 configure(api) {
