--- a/core/build.gradle
+++ b/core/build.gradle
@@ -27,6 +27,9 @@ if (repositoryUser) {//for internal users
     workRepositoryUrl = "$repositoryUrl/groups/work"
 }
 
+apply(plugin: 'java')
+apply(plugin: 'idea')
+
 configure([api, core]) {
     apply(plugin: 'java')
     apply(plugin: 'idea')
@@ -201,15 +204,22 @@ configure(core) {
         compile(group: "xalan", name: "xalan", version: "2.7.1")
         compile(group: "xalan", name: "serializer", version: "2.7.1")
         compile(group: "com.lowagie", name: "itext", version: "2.1.0") {
-            exclude(group: 'bouncycastle', module: 'bcmail-jdk14')
-            exclude(group: 'bouncycastle', module: 'bcprov-jdk14')
+            exclude(group: 'org.bouncycastle', module: 'bcmail-jdk14')
+            exclude(group: 'org.bouncycastle', module: 'bcprov-jdk14')
         }
         compile(group: 'com.haulmont.thirdparty', name: 'poi', version: '3.9.20130515')
-        compile(group: 'org.apache.poi', name: 'poi-scratchpad', version: '3.9')
+        compile(group: 'org.apache.poi', name: 'poi-scratchpad', version: '3.9') {
+            exclude (group:'org.apache.poi', module:'poi')
+        }
         compile(group: 'commons-codec', name: 'commons-codec', version: '1.6')
         compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.0.6')
-        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.0.6')
-        compile(group: "org.docx4j", name: "docx4j", version: "3.1.0")
+        compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.0.6') {
+            exclude(group: 'org.bouncycastle', module: 'bcmail-jdk14')
+            exclude(group: 'org.bouncycastle', module: 'bcprov-jdk14')
+        }
+        compile(group: "org.docx4j", name: "docx4j", version: "3.1.0") {
+            exclude (group:'org.apache.poi', module:'poi')
+        }
         compile(group: "com.jayway.jsonpath", name: "json-path", version: "0.9.1")
 
         testCompile(group: 'junit', name: 'junit', version: '4.5')
