--- a/core/build.gradle
+++ b/core/build.gradle
@@ -206,10 +206,8 @@ configure(core) {
         compile(group: "xalan", name: "xalan", version: "2.7.1")
         compile(group: "xalan", name: "serializer", version: "2.7.1")
         compile(group: "com.lowagie", name: "itext", version: "2.1.0") {
-            exclude(group: 'org.bouncycastle', module: 'bcmail-jdk14')
-            exclude(group: 'org.bouncycastle', module: 'bcprov-jdk14')
-            exclude(group: 'bouncycastle', module: 'bcmail-jdk14')
-            exclude(group: 'bouncycastle', module: 'bcprov-jdk14')
+            exclude(group: 'org.bouncycastle')
+            exclude(group: 'bouncycastle')
         }
         compile(group: 'com.haulmont.thirdparty', name: 'poi', version: '3.9.20130515')
         compile(group: 'org.apache.poi', name: 'poi-scratchpad', version: '3.9') {
@@ -218,10 +216,8 @@ configure(core) {
         compile(group: 'commons-codec', name: 'commons-codec', version: '1.6')
         compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.0.6')
         compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.0.6') {
-            exclude(group: 'org.bouncycastle', module: 'bcmail-jdk14')
-            exclude(group: 'org.bouncycastle', module: 'bcprov-jdk14')
-            exclude(group: 'bouncycastle', module: 'bcmail-jdk14')
-            exclude(group: 'bouncycastle', module: 'bcprov-jdk14')
+            exclude(group: 'org.bouncycastle')
+            exclude(group: 'bouncycastle')
         }
         compile(group: "org.docx4j", name: "docx4j", version: "3.1.0") {
             exclude(group: 'org.apache.poi', module: 'poi')
