PL-4161 Test yarg from gradle

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -250,6 +250,8 @@ configure(core) {
     }
 
     test {
+        maxHeapSize = "512m"
+        jvmArgs '-XX:MaxPermSize=256m'
         workingDir = new File('../..')
     }
 }
