--- a/core/build.gradle
+++ b/core/build.gradle
@@ -93,7 +93,7 @@ configure([api, core]) {
 //            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
 //            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-//                authentication(userName: 'tinhol', password:  "$signing.password")
+//                authentication(userName: '$signing.login', password:  "$signing.password")
 //            }
 
             repository(url: "$repositoryUrl/repositories/" + (isSnapshot ? 'snapshots' : 'releases')) {
