--- a/core/build.gradle
+++ b/core/build.gradle
@@ -211,9 +211,13 @@ configure(core) {
         compile(group: "org.apache.xmlgraphics", name: "batik-css", version: "1.7")
         compile(group: "xalan", name: "xalan", version: "2.7.1")
         compile(group: "xalan", name: "serializer", version: "2.7.1")
-        compile(group: "com.lowagie", name: "itext", version: "2.1.0") {
-            exclude(group: 'org.bouncycastle')
-            exclude(group: 'bouncycastle')
+        compile(group: "com.lowagie", name: "itext", version: "2.1.7") {
+            exclude(group: 'org.bouncycastle', module: 'bctsp-jdk14')
+            exclude(group: 'org.bouncycastle', module: 'bcprov-jdk14')
+            exclude(group: 'org.bouncycastle', module: 'bcmail-jdk14')
+            exclude(group: 'bouncycastle', module: 'bcmail-jdk14')
+            exclude(group: 'bouncycastle', module: 'bcprov-jdk14')
+            exclude(group: 'bouncycastle', module: 'bctsp-jdk14')
         }
         compile(group: 'com.haulmont.thirdparty', name: 'poi', version: '3.9.20130515')
         compile(group: 'org.apache.poi', name: 'poi-scratchpad', version: '3.9') {
@@ -222,8 +226,12 @@ configure(core) {
         compile(group: 'commons-codec', name: 'commons-codec', version: '1.6')
         compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.0.6')
         compile(group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf', version: '9.0.6') {
-            exclude(group: 'org.bouncycastle')
-            exclude(group: 'bouncycastle')
+            exclude(group: 'org.bouncycastle', module: 'bctsp-jdk14')
+            exclude(group: 'org.bouncycastle', module: 'bcprov-jdk14')
+            exclude(group: 'org.bouncycastle', module: 'bcmail-jdk14')
+            exclude(group: 'bouncycastle', module: 'bcmail-jdk14')
+            exclude(group: 'bouncycastle', module: 'bcprov-jdk14')
+            exclude(group: 'bouncycastle', module: 'bctsp-jdk14')
         }
         compile(group: "org.docx4j", name: "docx4j", version: "3.2.0") {
             exclude(group: 'org.apache.poi', module: 'poi')
