--- a/core/build.gradle
+++ b/core/build.gradle
@@ -238,6 +238,7 @@ configure(core) {
         compile(group: "org.docx4j", name: "docx4j", version: "3.2.0") {
             exclude(group: 'org.apache.poi', module: 'poi')
         }
+        compile(group: "org.docx4j", name: "docx4j-ImportXHTML", version: "3.2.0")
         compile(group: "com.jayway.jsonpath", name: "json-path", version: "0.9.1")
 
         testCompile(group: 'junit', name: 'junit', version: '4.5')
