--- a/core/build.gradle
+++ b/core/build.gradle
@@ -241,6 +241,7 @@ configure(core) {
         }
         compile(group: "org.docx4j", name: "docx4j-ImportXHTML", version: "3.2.0"){
             exclude(group: 'junit', module: 'junit')
+            exclude(group: 'org.apache.poi', module: 'poi')
         }
         compile(group: "com.jayway.jsonpath", name: "json-path", version: "2.1.0")
 
