PL-8031 YARG: do not upload TAR and ZIP artifacts to repository

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -251,6 +251,10 @@ configure(core) {
 
     mainClassName = "com.haulmont.yarg.console.ConsoleRunner"
 
+    configurations.archives.artifacts.removeAll {
+        it.file =~ 'tar' || it.file =~ 'zip'
+    }
+
     startScripts << {
         copy {
             from "reporting.properties"
