--- a/core/build.gradle
+++ b/core/build.gradle
@@ -246,7 +246,7 @@ configure(core) {
         compile(group: "com.jayway.jsonpath", name: "json-path", version: "2.1.0")
 
         testCompile(group: 'junit', name: 'junit', version: '4.5')
-        testCompile(group: 'hsqldb', name: 'hsqldb', version: '1.8.0.10')
+        testCompile(group: 'org.hsqldb', name: 'hsqldb', version: '2.3.3')
     }
 
     mainClassName = "com.haulmont.yarg.console.ConsoleRunner"
