--- a/core/build.gradle
+++ b/core/build.gradle
@@ -183,7 +183,7 @@ configure(core) {
     dependencies {
         compile(api)
         compile(group: 'commons-logging', name: 'commons-logging', version: '1.2')
-        compile(group: 'commons-lang', name: 'commons-lang', version: '2.6')
+        compile(group: 'org.apache.commons', name: 'commons-lang3', version: '3.4')
         compile(group: 'commons-io', name: 'commons-io', version: '2.4')
         compile(group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4')
         compile(group: 'dom4j', name: 'dom4j', version: '1.6.1')
