--- a/core/build.gradle
+++ b/core/build.gradle
@@ -185,7 +185,6 @@ configure(core) {
         compile(group: 'commons-logging', name: 'commons-logging', version: '1.2')
         compile(group: 'org.apache.commons', name: 'commons-lang3', version: '3.4')
         compile(group: 'commons-io', name: 'commons-io', version: '2.4')
-        compile(group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4')
         compile(group: 'dom4j', name: 'dom4j', version: '1.6.1')
         compile(group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21')
         compile(group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.7.21')
@@ -253,6 +252,7 @@ configure(core) {
         testCompile(group: 'junit', name: 'junit', version: '4.5')
         testCompile(group: 'org.hsqldb', name: 'hsqldb', version: '2.3.3')
         testCompile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3')
+        testCompile(group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4')
     }
 
     test {
@@ -270,6 +270,7 @@ configure(console) {
         compile(core)
         compile(group: 'commons-cli', name: 'commons-cli', version: '1.2')
         compile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3')
+        compile(group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4')
         testCompile(group: 'junit', name: 'junit', version: '4.5')
     }
 
