--- a/core/build.gradle
+++ b/core/build.gradle
@@ -245,6 +245,7 @@ configure(core) {
             exclude(group: 'org.slf4j', module: 'slf4j-log4j12')
         }
         compile(group: "com.jayway.jsonpath", name: "json-path", version: "2.1.0")
+        compile(group: "com.opencsv", name: "opencsv", version: "3.10")
 
         testCompile(group: 'junit', name: 'junit', version: '4.5')
         testCompile(group: 'org.hsqldb', name: 'hsqldb', version: '2.3.3')
