--- a/core/build.gradle
+++ b/core/build.gradle
@@ -18,6 +18,7 @@ def isSnapshot = artifactVersion.endsWith('-SNAPSHOT')
 def api = project(':yarg-api')
 def core = project(':yarg')
 def console = project(':yarg-console')
+def server = project(':yarg-server')
 
 def repositoryUser = System.getenv('HAULMONT_REPOSITORY_USER')
 def repositoryPassword, repositoryUrl, workRepositoryUrl;
@@ -33,7 +34,7 @@ if (repositoryUser) {//for internal users
     workRepositoryUrl = "$repositoryUrl/groups/work"
 }
 
-configure([api, core, console]) {
+configure([api, core, console, server]) {
     apply(plugin: 'maven')
     apply(plugin: 'signing')
 
@@ -268,6 +269,16 @@ configure(core) {
         maxHeapSize = "512m"
         jvmArgs '-XX:MaxPermSize=256m'
         workingDir = new File('../..')
+    }
+}
+
+configure(server) {
+    dependencies {
+        compile(api)
+        compile(core)
+        compile(console)
+        compile(group: 'com.sparkjava', name: 'spark-core', version: '2.6.0')
+        testCompile(group: 'junit', name: 'junit', version: '4.5')
     }
 }
 
