--- a/core/modules/core/test/extraction/fixture/cross_json_report_band.yml
+++ b/core/modules/core/test/extraction/fixture/cross_json_report_band.yml
@@ -3,7 +3,7 @@ children:
   - name: crosstab
     orientation: C
     queries:
-      - #Horizontal tab
+      - #Horizontal tab (name must starts with band name)
         name: crosstab_dynamic_header
         params:
           dynamic_header: '[{
@@ -14,7 +14,7 @@ children:
                "name": "Test 2"
              }]'
         json: "parameter=dynamic_header $.[*]"
-      - #Vertical tab
+      - #Vertical tab (name must starts with band name)
         name: crosstab_master_data
         params:
           master_data: '[{
@@ -27,7 +27,7 @@ children:
                 "value": 7
              }]'
         json: "parameter=master_data $[*]"
-      - #Cross data tab - one execution for all intersections
+      - #Cross data tab - one execution for all intersections (name and count of cross datasets does not matter - for xlsx template will be used name of band)
         name: data
         params:
             data: '[{
