--- a/core/build.gradle
+++ b/core/build.gradle
@@ -266,13 +266,13 @@ configure(core) {
             exclude(group: 'com.lowagie', module: 'itext')
         }
 
+        testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.15')
         testCompile(group: 'junit', name: 'junit', version: '4.5')
         testCompile(group: 'com.h2database', name: 'h2', version: '1.4.196')
         testCompile(group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3')
         testCompile(group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4')
         testCompile(group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.2')
         testCompile(group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.9.2')
-
     }
 
     test {
